添加折叠屏组件、支持无障碍模式、小窗模式

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,13 @@
             android:label="RefreshRecyclerView测试"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:parentActivityName=".MainActivity" />
+
+        <activity
+            android:name=".fold.FoldPadWindowTestActivity"
+            android:exported="false"
+            android:label="折叠屏小窗测试"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
