--- a/foldwindow/build.gradle
+++ b/foldwindow/build.gradle
@@ -1,21 +1,18 @@
 plugins {
-    alias(libs.plugins.android.application)
+    alias(libs.plugins.android.library)
 }
 
 android {
-    namespace 'com.example.androiduidemo'
+    namespace 'com.example.foldwindow'
     compileSdk {
         version = release(36)
     }
 
     defaultConfig {
-        applicationId "com.example.androiduidemo"
         minSdk 24
         targetSdk 36
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -27,6 +24,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
+    }
+    lint {
+        abortOnError false
+        checkReleaseBuilds false
     }
 }
 
@@ -41,17 +42,4 @@ configurations.all {
 dependencies {
     implementation libs.androidx.appcompat
     implementation libs.androidx.core
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    
-    // 组件库依赖
-    implementation project(':customdialog')
-    implementation project(':customtoast')
-    implementation project(':datepicker')
-    implementation project(':searchbox')
-    implementation project(':refreshrecyclerview')
-    implementation project(':foldwindow')
-    
-    testImplementation libs.junit
-    androidTestImplementation libs.androidx.junit
-    androidTestImplementation libs.androidx.espresso.core
 }
